stop nav-bar white-space to wrapping

--- a/landing_page/styles/style.scss
+++ b/landing_page/styles/style.scss
@@ -10,8 +10,12 @@
 #nav--right {
   font-family: 'Poppins', serif;
   display: flex;
-  text-align: right;
   justify-content: space-around;
   align-items: center;
+  text-align: right;
   width: 60%;
+
+  // normal font size
+  font-size: 1rem;
+  white-space: nowrap;
 }
